[package]
name = "bevy_template"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "dynamic",
    "filesystem_watcher",
    "trace"
     ] }

# cargo run --release --features bevy/trace,bevy/trace_chrome
